# Hackathon0

./: .gitignore  CHANGELOG.md  CLAUDE.md  HACKATHON0_REQUIREMENTS_STATUS.md  MCP_SETUP.md  MCP_TEST_REPORT.md  PRODUCTION_DEPLOYMENT_GUIDE.md  README.md  WATCHER_SYSTEM_CHECK.md  demo.js  package-lock.json  package.json  prompt.md  pyproject.toml  run_calendar_watcher.py  run_filesystem_watcher.py  run_gmail_watcher.py  run_slack_watcher.py  run_whatsapp_watcher.py  run_xero_watcher.py  start_chrome.bat
.claude/: config.json  settings.json
AI_Employee_Vault/: .email_last_id.txt  Business Goals.md  Business_Goals.md  Company Handbook.md  Company_Handbook.md  Dashboard.md  Index.md  MINOR_ISSUES_FIXED_20260128.md  ODOO_INTEGRATION_COMPLETE.md  ODOO_TEST_COMPLETE.md  PLATINUM_TIER_COMPLETE.md  PLATINUM_TIER_COMPLETION_SUMMARY.md  README.md  SYSTEM_TEST_REPORT_20260128.md
dashboard/: server.js  tasks.json
docs/: A2A_MESSAGING.md  APPROVAL_MONITORS.md  ARCHITECTURE.md  AUTO_RESEARCH_LINKEDIN_SPEC.md  DEMO_QUICK_REFERENCE.md  DIGITALOCEAN_SETUP.md  GETTING_STARTED.md  GOLD_TIER_COMPLETION.md  Hackathon0.md  ODOO_INTEGRATION_GUIDE.md  PLATINUM_QUICKSTART.md  PLATINUM_TIER_COMPLETION.md  PLATINUM_TIER_FINAL_COMPLETION.md  PLATINUM_TIER_IMPLEMENTATION_GUIDE.md  PLATINUM_TIER_IMPLEMENTATION_PLAN.md  PLATINUM_TIER_SETUP.md  PLATINUM_TIER_SETUP_SUMMARY.md  PRESENTATION_DEMO_GUIDE.md  PROCESS_CONTROL.md  PROCESS_CONTROL_GUIDE.md  PROCESS_MANAGEMENT.md  QUICKSTART.md  QUICK_REFERENCE.md  RALPH_USER_GUIDE.md  README.md  REQUIREMENTS_VS_IMPLEMENTATION_ANALYSIS.md  SECURITY.md  (+9 more)
(+8881 files in other folders)
