[project]
name = "personal-ai-employee"
version = "0.1.0"
description = "Personal AI Employee - Autonomous Digital FTE using Claude Code and Obsidian"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-api-python-client>=2.100.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.0.0",
    "watchdog>=4.0.0",
    "xero-python>=2.0",
    "requests-oauthlib>=2.0.0",
    "pyautogui>=0.9.54",
    "pillow>=10.0.0",
    "pyperclip>=1.8.0",
]

[project.scripts]
gmail-watcher = "watchers.gmail_watcher:main"
calendar-watcher = "watchers.calendar_watcher:main"

[tool.hatch.build.targets.wheel]
packages = ["watchers", "utils", ".claude"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
